kubernetes-extension-test/src/test/resources/openshift/route/kubernetes/simple_route.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  annotations: {}
  labels:
    app: "simple_route"
  name: "helloep-svc"
spec:
  ports:
  - port: 9090
    protocol: "TCP"
    targetPort: 9090
  selector:
    app: "simple_route"
  type: "ClusterIP"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  annotations: {}
  labels:
    app: "simple_route"
  name: "simple-route-deployment"
spec:
  replicas: 1
  template:
    metadata:
      annotations: {}
      labels:
        app: "simple_route"
    spec:
      containers:
      - image: "simple_route:latest"
        imagePullPolicy: "IfNotPresent"
        name: "simple-route-deployment"
        ports:
        - containerPort: 9090
          protocol: "TCP"
      nodeSelector: {}
---
apiVersion: "route.openshift.io/v1"
kind: "Route"
metadata:
  annotations: {}
  labels: {}
  name: "helloep-openshift-route"
spec:
  host: "www.bxoc.com"
  port:
    targetPort: 9090
  to:
    kind: "Service"
    name: "helloep-svc"
    weight: 100
